k8s/deployment-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-api
  namespace: sami
  labels:
    app: training-k8s
    tier: api
spec:
  selector:
    matchLabels:
      app: training-k8s
      tier: api
  template:
    metadata:
      labels:
        app: training-k8s
        tier: api
    spec:
      containers:
      - name: tutoapi-img
        image: samiamr/api-k8s
        imagePullPolicy: Always
      dnsPolicy: ClusterFirst
