k8s/deployment-bdd.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-bdd
  namespace: sami
  labels:
    app: training-k8s
    tier: bdd
spec: 
  selector:
    matchLabels:
      app: training-k8s
      tier: bdd
  template:
    metadata:
      labels:
        app: training-k8s
        tier: bdd
    spec:
      containers:
      - name: tutobdd-img
        image: samiamr/bdd-mysql-k8s
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /bitnami/mysql/data
          name: storagemysql
      volumes:
        - name: storagemysql
          persistentVolumeClaim:
            claimName: pvc-bdd
      restartPolicy: Always
      dnsPolicy: ClusterFirst
