k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: sami
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: api-sami.formationk8.projet-davidson.fr
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: tutoapi
          servicePort: 3000
